<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/textView4"
            style="@style/registration_main_text_view"
            android:layout_marginTop="100dp"
            android:text="@string/sms_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_icon" />

        <TextView
            android:id="@+id/phone_number"
            style="@style/TextView_16sp_Bold"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/back_icon"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextView_16sp_Bold"
            android:layout_marginTop="26dp"
            android:text="@string/type_code"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_number" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/otpTextView"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:focusable="false"
            android:textColor="#383838"
            app:bar_enabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView6"
            app:length="6"
            app:otp_box_background="@color/white"
            app:otp_text_size="32sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton"
            style="@style/registration_button"
            android:layout_marginTop="26dp"
            android:enabled="false"
            android:text="@string/Potverdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otpTextView" />

        <TextView
            android:id="@+id/textView7"
            style="@style/TextView_16sp_Bold"
            android:layout_width="200dp"
            android:layout_marginTop="30dp"
            android:text="@string/if_message_null"
            android:textColor="@color/white"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration_button"
            style="@style/registration_button"
            android:layout_marginTop="18dp"
            android:text="@string/send_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>